# gold-price-monitoring

./: .env.example  .gitignore  README.md  activate_venv.sh  index.html  mongodb_pipeline.py  pyproject.toml  requirements.txt  run_pipeline.sh
.dlt/: .sources  secrets.toml
.github/workflows/: gold-tracker.yml
data/: gold_prices.json
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/: schema.yml
dbt_project/models/marts/: fct_gold_prices.sql
dbt_project/models/staging/: stg_gold_prices.sql
excalidraw/: generate_architecture.py  project_architecture_with_logos.excalidraw
images/: project_architecture.excalidraw
sources/: analysis.py  dlt_ingestion.py  scraper.py  visualize.py
sources/dlt/: dlt_ingestion.py  mongodb_pipeline.py
sources/mongodb/: fix_mongodb_data.py
sources/scraper/: scraper.py
sources/supabase/: check_db.py  debug_db.py  query_debug.py  supabase.py
sources/utils/: analysis.py  visualize.py
